--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -16,6 +16,7 @@
     "http-errors": "~1.6.2",
     "mongoose": "^5.4.20",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
     "serve-favicon": "^2.5.0"
   }
 }
