--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.4.20",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0"
   }
 }
