--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "csurf": "^1.9.0",
